--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
@@ -253,7 +253,7 @@
                     </div>
                     <div class="col-sm-7">
                         <input type="submit" value="Save" name="command" class="btn btn-success btn-flat" />
-                        <a class="btn btn-default btn-flat" href="@Url.Action("Index")" style="margin-left: 15px">Cancel</a>
+                        <a class="btn btn-default btn-flat" href="@Url.Action("Index")">Cancel</a>
                     </div>
                 </div>
             }
