--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -25,6 +25,16 @@
         margin: 0px;
     }
 
+    .header-content {
+        background-color: #c9e0fa;
+        padding: 0px 10px 0px 25px;
+        margin: 4px;
+    }
+
+    .row-content {
+        padding: 3px 0px;
+    }
+
     .row-content {
         padding: 7px 0px;
     }
