--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -137,86 +137,6 @@
                 <div class="modal-body">
                     <div class="box-body ticket-contents">
                         <div class="col-sm-12 header-content">
-                            <h5><i class="fa fa-clock-o"></i>  Date and time</h5>
-                        </div>
-                        <div class="col-sm-12 row-content">
-                            <div class="col-sm-6">
-                                <div class="col-sm-5 labels"><b>Created date: </b></div>
-                                <div class="col-sm-7"><span id="ticket-created-date"></span></div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="col-sm-5 labels"><b>Last modified date: </b></div>
-                                <div class="col-sm-7"><span id="ticket-modified-date"></span></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 row-content">
-                            <div class="col-sm-6">
-                                <div class="col-sm-5 labels"><b>Scheduled start time: </b></div>
-                                <div class="col-sm-7"><span id="ticket-schedule-start"></span></div>
-                            </div>
-                            <div class="col-sm-6 ">
-                                <div class="col-sm-5 labels"><b>Schedule end time: </b></div>
-                                <div class="col-sm-7"><span id="ticket-schedule-end"></span></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 row-content">
-                            <div class="col-sm-6 ">
-                                <div class="col-sm-5 labels"><b>Actual start time: </b></div>
-                                <div class="col-sm-7"><span id="ticket-actual-start"></span></div>
-                            </div>
-                            <div class="col-sm-6 ">
-                                <div class="col-sm-5 labels"><b>Actual end time: </b></div>
-                                <div class="col-sm-7"><span id="ticket-actual-end"></span></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 header-content">
-                            <h5><i class="fa fa-file-text"></i> Information</h5>
-                        </div>
-                        <div class="col-sm-12 row-content ">
-                            <div class="col-sm-12">
-                                <div class="col-sm-2 labels">
-                                    <b>Description: </b>
-                                </div>
-                                <div class="col-sm-10 pre-wrap" id="ticket-description" style="padding-left: 10px"></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 row-content ">
-                            <div class="col-sm-12">
-                                <div class="col-sm-2 labels">
-                                    <b>Solution: </b>
-                                </div>
-                                <div class="col-sm-10 pre-wrap" id="ticket-solution" style="padding-left: 10px"></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 row-content ">
-                            <div class="col-sm-6 ">
-                                <div class="col-sm-4 labels">
-                                    <b>Attachment: </b>
-                                </div>
-                                <div class="col-sm-8"><span id="ticket-attachment">-</span></div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="col-sm-4 labels">
-                                    <b>Created by: </b>
-                                </div>
-                                <div class="col-sm-8"><span id="ticket-created-by"></span></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 row-content ">
-                            <div class="col-sm-6 ">
-                                <div class="col-sm-4 labels">
-                                    <b>Assigned by: </b>
-                                </div>
-                                <div class="col-sm-8"><span id="ticket-assigned-by"></span></div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="col-sm-4 labels">
-                                    <b>Solved by: </b>
-                                </div>
-                                <div class="col-sm-8"><span id="ticket-solved-by"></span></div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 header-content">
                             <h5><i class="fa fa-info-circle"></i> Detail</h5>
                         </div>
                         <div class="col-sm-12 row-content">
@@ -273,6 +193,93 @@
                                 <div class="col-sm-9" style="padding-left: 22px"><span id="ticket-impact-detail"></span></div>
                             </div>
                         </div>
+                        <div class="col-sm-12 header-content">
+                            <h5><i class="fa fa-clock-o"></i> Date and time</h5>
+                        </div>
+                        <div class="col-sm-12 row-content">
+                            <div class="col-sm-6">
+                                <div class="col-sm-5 labels"><b>Created date: </b>
+                                </div>
+                                <div class="col-sm-7"><span id="ticket-created-date"></span></div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="col-sm-5 labels"><b>Last modified date: </b>
+                                </div>
+                                <div class="col-sm-7"><span id="ticket-modified-date"></span></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 row-content">
+                            <div class="col-sm-6">
+                                <div class="col-sm-5 labels"><b>Scheduled start time: </b>
+                                </div>
+                                <div class="col-sm-7"><span id="ticket-schedule-start"></span></div>
+                            </div>
+                            <div class="col-sm-6 ">
+                                <div class="col-sm-5 labels"><b>Schedule end time: </b>
+                                </div>
+                                <div class="col-sm-7"><span id="ticket-schedule-end"></span></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 row-content">
+                            <div class="col-sm-6 ">
+                                <div class="col-sm-5 labels"><b>Actual start time: </b>
+                                </div>
+                                <div class="col-sm-7"><span id="ticket-actual-start"></span></div>
+                            </div>
+                            <div class="col-sm-6 ">
+                                <div class="col-sm-5 labels"><b>Actual end time: </b>
+                                </div>
+                                <div class="col-sm-7"><span id="ticket-actual-end"></span></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 header-content">
+                            <h5><i class="fa fa-file-text"></i> Information</h5>
+                        </div>
+                        <div class="col-sm-12 row-content ">
+                            <div class="col-sm-12">
+                                <div class="col-sm-2 labels">
+                                    <b>Description: </b>
+                                </div>
+                                <div class="col-sm-10 pre-wrap" id="ticket-description" style="padding-left: 10px"></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 row-content ">
+                            <div class="col-sm-12">
+                                <div class="col-sm-2 labels">
+                                    <b>Solution: </b>
+                                </div>
+                                <div class="col-sm-10 pre-wrap" id="ticket-solution" style="padding-left: 10px"></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 row-content ">
+                            <div class="col-sm-6 ">
+                                <div class="col-sm-4 labels">
+                                    <b>Attachment: </b>
+                                </div>
+                                <div class="col-sm-8"><span id="ticket-attachment">-</span></div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="col-sm-4 labels">
+                                    <b>Created by: </b>
+                                </div>
+                                <div class="col-sm-8"><span id="ticket-created-by"></span></div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 row-content ">
+                            <div class="col-sm-6 ">
+                                <div class="col-sm-4 labels">
+                                    <b>Assigned by: </b>
+                                </div>
+                                <div class="col-sm-8"><span id="ticket-assigned-by"></span></div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="col-sm-4 labels">
+                                    <b>Solved by: </b>
+                                </div>
+                                <div class="col-sm-8"><span id="ticket-solved-by"></span></div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 @*<div class="modal-footer">
