--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -329,15 +329,14 @@
                 <table class="table" id="ticket-table">
                     <thead>
                         <tr>
-                            <th />
-                            <th>No</th>
-                            <th>Subject</th>
-                            <th>Requester</th>
-                            <th>Assigned To</th>
-                            <th>Solved Date</th>
-                            <th>Status</th>
-                            <th>Created Date</th>
-                            <th>Options</th>
+                            <th style="width: 5%;"/>
+                            <th style="width: 20%;">Subject</th>
+                            <th style="width: 10%;">Requester</th>
+                            <th style="width: 10%;">Assigned To</th>
+                            <th style="width: 10%;">Solved Date</th>
+                            <th style="width: 10%;">Status</th>
+                            <th style="width: 15%;">Last Modified</th>
+                            <th style="width: 20%;">Options</th>
                         </tr>
                     </thead>
                     <tbody></tbody>
