--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -56,21 +56,24 @@
 
     .detail-modal-body {
         background-color: #f6f6f6 !important;
-       padding: 15px 15px 1px 15px;
+        padding: 15px 15px 1px 15px;
     }
 
     .ticket-contents .box {
         margin-bottom: 15px;
     }
 
-    .ticket-contents .box .box-header {
-        padding: 5px 10px 5px 10px !important;
-    }
+        .ticket-contents .box .box-header {
+            padding: 5px 10px 5px 10px !important;
+        }
 
-     .ticket-contents .box .box-body {
-        padding: 5px 10px 5px 10px !important;
-    }
+        .ticket-contents .box .box-title {
+            font-weight: bold;
+        }
 
+        .ticket-contents .box .box-body {
+            padding: 5px 10px 5px 10px !important;
+        }
 
     .header-content {
         margin-right: 10px;
@@ -154,7 +157,7 @@
                         <div class="box box-solid">
                             <div class="box-header with-border">
                                 <h2 class="box-title">
-                                    <i class="fa fa-info-circle header-content" ></i>DETAIL
+                                    <i class="fa fa-info-circle header-content"></i>DETAIL
                                 </h2>
                             </div>
                             <!-- /.box-header -->
